@@ -2,8 +2,9 @@ shorewall-doc (4.5.1-1) unstable; urgency=low
 
   * New Upstream Version
   * Update to Standards-Version 3.9.3 (no changes)
+  * Convert debhelper compatibility level 8
 
- -- Roberto C. Sanchez <roberto@connexer.com>  Fri, 30 Mar 2012 18:55:11 -0400
+ -- Roberto C. Sanchez <roberto@connexer.com>  Sun, 01 Apr 2012 21:42:35 -0400
 
 shorewall-doc (4.5.0-1) unstable; urgency=low
 
